# picool

./: Cargo.toml  README.md
.cargo/: config.toml
install/: 10-azuremonitor.conf  azuremonitor.env  influx_temps.sh  picool.env  picool.service  telegraf.conf
src/: demo_world.rs  main.rs  real_world.rs
