[package]
name = "picool"
version = "0.2.0"
authors = ["Will Brown <opensource@rebeagle.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
rppal = "0.11.3"
cfg-if = "1.0.0"
log = "0.4"
env_logger = "0.7"
strum_macros = "0.19"


[features]
demo-mode = []

[profile.release]
opt-level = 1
overflow-checks = true


